syntax = "proto3";

import "base.proto";

option java_package = "com.loyaltysystem.customer";

// Identifier that is encoded in a QR code
// for a transaction.
message CustomerIdentifier {
	Customer customer = 1;
	string nonce = 2;
}

message BalanceRequest {
	int64 customer_id = 1;
}

message Balances {
	repeated AccountBalance balances = 1;
}

message EnrollInBusinessRequest {
	// When this user wants to enroll
	// in the rewards program of this business,
	// the Enroll endpoint is called.
	Customer customer = 1;
	int32 business_id = 2;
}

message EnrollInBusinessResponse {
	bool success = 1;
}

message AwaitReq {
	int64 user_id = 1;
}

message AwaitRsp {
	// If this await response represents an actual action, then
	// action is set to true.
	bool action = 4;


	int32 point_change = 1;
	int64 business_id = 2;
	string business_name = 3;
}

service CustomerServer {
	rpc GetBalances (BalanceRequest) returns (Balances) {}
	rpc EnrollInBusiness (EnrollInBusinessRequest) returns (EnrollInBusinessResponse) {}
	rpc AwaitTransaction (AwaitReq) returns (stream AwaitRsp) {}
}

